Bug 952982 - Submit inputs are subject to constraint validation and match :valid/:invalid as needed. r=bz